Basic crud for product entity implemented

--- a/Ecommerce-App/src/main/resources/application.properties
+++ b/Ecommerce-App/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Ecommerce-App
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommdb
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
